resolves #942 Analytics (rework)
- rename Monitoring menu to Analytics
- new version of analytics charts
- move Bot Flow to analytics menu
- split Activity and Behavior tabs
- add table to charts (flip card)
- add pie next to histogram charts
- set default search window to 7 days
- TODO: repair colors, check timezone/datetimes, add descriptions, find better chart for 4 and 5, add table alternative to graphs, etc.

Signed-off-by: Francois Nollen <francois.nollen@gmail.com>

--- a/bot/admin/web/src/app/analytics/flow/flow.component.html
+++ b/bot/admin/web/src/app/analytics/flow/flow.component.html
@@ -20,8 +20,8 @@
       Bot Flow
       <span *ngIf="statsMode" class="status status-header statsMode-badge statsMode-true" nbTooltip="Dynamic mode (user flow)">Dynamic</span>
       <span *ngIf="!statsMode" class="status status-header statsMode-badge statsMode-false" nbTooltip="Static mode (available stories)">Static</span>
-      <nb-icon *ngIf="accordion.collapsed" nbTooltip="Show options">chevron-down</nb-icon>
-      <nb-icon *ngIf="!accordion.collapsed" nbTooltip="Hide options">chevron-up</nb-icon>
+      <nb-icon *ngIf="accordion.collapsed" nbTooltip="Show options" icon="chevron-down"></nb-icon>
+      <nb-icon *ngIf="!accordion.collapsed" nbTooltip="Hide options" icon="chevron-up"></nb-icon>
     </nb-accordion-item-header>
     <nb-accordion-item-body>
 
