--- a/bot/admin/web/src/app/test/plan/test-plan.component.html
+++ b/bot/admin/web/src/app/test/plan/test-plan.component.html
@@ -100,7 +100,7 @@
           </button>
             </span>
             <span *ngIf="p.dialogs.length === 0">
-          - you can add dialogs via the Monitoring menu.
+          - you can add dialogs via the Analytics menu.
             </span>
           </div>
         </nb-card-header>
