--- a/bot/admin/web/src/app/bot/feature/story-rule.component.html
+++ b/bot/admin/web/src/app/bot/feature/story-rule.component.html
@@ -33,31 +33,31 @@
         <br>
         <nb-select outline status="primary" [(selected)]="feature.story" class="story new" nbTooltip="Story">
           <nb-select-label *ngIf="feature && feature.story">
-            <mat-icon *ngIf="feature.story.isBuiltIn()" class="story-type">build</mat-icon>
-            <mat-icon *ngIf="feature.story.isSimpleAnswer()" class="story-type">message</mat-icon>
-            <mat-icon *ngIf="feature.story.isScriptAnswer()" class="story-type">code</mat-icon>
+            <nb-icon *ngIf="feature.story.isBuiltIn()" class="story-type" icon="cube"></nb-icon>
+            <nb-icon *ngIf="feature.story.isSimpleAnswer()" class="story-type" icon="message-square-outline"></nb-icon>
+            <nb-icon *ngIf="feature.story.isScriptAnswer()" class="story-type" icon="code"></nb-icon>
             <span class="story-label">{{feature.story.name}}</span>
           </nb-select-label>
           <nb-option *ngFor="let s of stories" [value]="s" class="story-label">
-            <mat-icon *ngIf="s.isBuiltIn()" class="story-type">build</mat-icon>
-            <mat-icon *ngIf="s.isSimpleAnswer()" class="story-type">message</mat-icon>
-            <mat-icon *ngIf="s.isScriptAnswer()" class="story-type">code</mat-icon>
+            <nb-icon *ngIf="s.isBuiltIn()" class="story-type" icon="cube"></nb-icon>
+            <nb-icon *ngIf="s.isSimpleAnswer()" class="story-type" icon="message-square-outline"></nb-icon>
+            <nb-icon *ngIf="s.isScriptAnswer()" class="story-type" icon="code"></nb-icon>
             {{s.name}}
           </nb-option>
         </nb-select>
         <nb-select outline status="primary" placeholder="Story Redirection" [(selected)]="feature.switchToStoryId"
                    class="story new" nbTooltip="Story Redirection" (selectedChange)="onSwitchStoryChange()">
           <nb-select-label *ngIf="feature && feature.switchToStory">
-            <mat-icon *ngIf="feature.switchToStory.isBuiltIn()" class="story-type">build</mat-icon>
-            <mat-icon *ngIf="feature.switchToStory.isSimpleAnswer()" class="story-type">message</mat-icon>
-            <mat-icon *ngIf="feature.switchToStory.isScriptAnswer()" class="story-type">code</mat-icon>
+            <nb-icon *ngIf="feature.switchToStory.isBuiltIn()" class="story-type" icon="cube"></nb-icon>
+            <nb-icon *ngIf="feature.switchToStory.isSimpleAnswer()" class="story-type" icon="message-square-outline"></nb-icon>
+            <nb-icon *ngIf="feature.switchToStory.isScriptAnswer()" class="story-type" icon="code"></nb-icon>
             <span class="story-label">{{feature.switchToStory.name}}</span>
           </nb-select-label>
           <nb-option>No Redirection</nb-option>
           <nb-option *ngFor="let s of stories" [value]="s.storyId" class="story-label">
-            <mat-icon *ngIf="s.isBuiltIn()" class="story-type">build</mat-icon>
-            <mat-icon *ngIf="s.isSimpleAnswer()" class="story-type">message</mat-icon>
-            <mat-icon *ngIf="s.isScriptAnswer()" class="story-type">code</mat-icon>
+            <nb-icon *ngIf="s.isBuiltIn()" class="story-type" icon="cube"></nb-icon>
+            <nb-icon *ngIf="s.isSimpleAnswer()" class="story-type" icon="message-square-outline"></nb-icon>
+            <nb-icon *ngIf="s.isScriptAnswer()" class="story-type" icon="code"></nb-icon>
             <span class="story-label">{{s.name}}</span>
           </nb-option>
         </nb-select>
@@ -74,9 +74,9 @@
         </div>
         <div *ngFor="let f of disabledFeatures" class="feature">
           <div class="category cell" nbTooltip="Story">
-            <mat-icon *ngIf="f.story.isBuiltIn()" class="story-type">build</mat-icon>
-            <mat-icon *ngIf="f.story.isSimpleAnswer()" class="story-type">message</mat-icon>
-            <mat-icon *ngIf="f.story.isScriptAnswer()" class="story-type">code</mat-icon>
+            <nb-icon *ngIf="f.story.isBuiltIn()" class="story-type" icon="cube"></nb-icon>
+            <nb-icon *ngIf="f.story.isSimpleAnswer()" class="story-type" icon="message-square-outline"></nb-icon>
+            <nb-icon *ngIf="f.story.isScriptAnswer()" class="story-type" icon="code"></nb-icon>
             {{f.story.name}}
           </div>
           <div class="category cell">
@@ -110,9 +110,9 @@
         </div>
         <div *ngFor="let f of redirectedFeatures" class="feature">
           <div class="category cell" nbTooltip="Story">
-            <mat-icon *ngIf="f.story.isBuiltIn()" class="story-type">build</mat-icon>
-            <mat-icon *ngIf="f.story.isSimpleAnswer()" class="story-type">message</mat-icon>
-            <mat-icon *ngIf="f.story.isScriptAnswer()" class="story-type">code</mat-icon>
+            <nb-icon *ngIf="f.story.isBuiltIn()" class="story-type" icon="cube"></nb-icon>
+            <nb-icon *ngIf="f.story.isSimpleAnswer()" class="story-type" icon="message-square-outline"></nb-icon>
+            <nb-icon *ngIf="f.story.isScriptAnswer()" class="story-type" icon="code"></nb-icon>
             {{f.story.name}}
           </div>
           <div class="category cell">
@@ -126,9 +126,9 @@
           </div>
           <div class="category cell">
             <div nbTooltip="Switch to Story">
-              <mat-icon *ngIf="f.switchToStory.isBuiltIn()" class="story-type">build</mat-icon>
-              <mat-icon *ngIf="f.switchToStory.isSimpleAnswer()" class="story-type">message</mat-icon>
-              <mat-icon *ngIf="f.switchToStory.isScriptAnswer()" class="story-type">code</mat-icon>
+              <nb-icon *ngIf="f.switchToStory.isBuiltIn()" class="story-type" icon="cube"></nb-icon>
+              <nb-icon *ngIf="f.switchToStory.isSimpleAnswer()" class="story-type" icon="message-square-outline"></nb-icon>
+              <nb-icon *ngIf="f.switchToStory.isScriptAnswer()" class="story-type" icon="code"></nb-icon>
               <span class="story-label">{{f.switchToStory.name}}</span>
             </div>
           </div>
