--- a/bot/admin/web/src/app/bot/flow/flow.component.html
+++ b/bot/admin/web/src/app/bot/flow/flow.component.html
@@ -18,23 +18,23 @@
   <nb-accordion-item #accordion>
     <nb-accordion-item-header>
       Bot Flow
-      <span *ngIf="statsMode" class="status status-header statsMode-badge statsMode-true" title="Dynamic mode (user flow)">Dynamic</span>
-      <span *ngIf="!statsMode" class="status status-header statsMode-badge statsMode-false" title="Static mode (available stories)">Static</span>
-      <mat-icon *ngIf="accordion.collapsed" title="Show options">expand_more</mat-icon>
-      <mat-icon *ngIf="!accordion.collapsed" title="Hide options">expand_less</mat-icon>
+      <span *ngIf="statsMode" class="status status-header statsMode-badge statsMode-true" nbTooltip="Dynamic mode (user flow)">Dynamic</span>
+      <span *ngIf="!statsMode" class="status status-header statsMode-badge statsMode-false" nbTooltip="Static mode (available stories)">Static</span>
+      <nb-icon *ngIf="accordion.collapsed" nbTooltip="Show options">chevron-down</nb-icon>
+      <nb-icon *ngIf="!accordion.collapsed" nbTooltip="Hide options">chevron-up</nb-icon>
     </nb-accordion-item-header>
     <nb-accordion-item-body>
 
       <div class="flow-option-group">
         <span class="flow-option-group-name">Mode:</span>
-        <span class="flow-option-label" title="Show available stories (static mode)">Available stories</span>
+        <span class="flow-option-label" nbTooltip="Show available stories (static mode)">Available stories</span>
         <mat-slide-toggle
           [(ngModel)]="statsMode"
           class="mode-selection"
           color="primary"
           (change)="changeMode()">
         </mat-slide-toggle>
-        <span class="flow-option-label" title="Show effective user trafic (dynamic mode)">User flow on</span>
+        <span class="flow-option-label" nbTooltip="Show effective user trafic (dynamic mode)">User flow on</span>
         <date-range-calendar [disabled]="!statsMode" [rangeInDays]="90" (datesChanged)="datesChanged($event)"></date-range-calendar>
       </div>
 
@@ -43,7 +43,7 @@
       <div class="flow-option-group">
         <span class="flow-option-group-name">{{ statsMode ? "Scope:" : "Scope / Filters:"}}</span>
         <nb-checkbox [(ngModel)]="allowSelectAllConfigs" class="checkbox" (change)="changeAllowSelectAllConfigs()"
-                     title="Allow selecting All Configurations at once (possible performance impact)">Allow <em>All</em></nb-checkbox>
+                     nbTooltip="Allow selecting All Configurations at once (possible performance impact)">Allow <em>All</em></nb-checkbox>
         <tock-select-bot [allowNoConfigurationSelection]="false" noConnectorLabel="All Connectors"
                          [allowNoSelection]="allowSelectAllConfigs" noConfigurationLabel="All Configurations"
                          (selectionChange)="selectedConfigurationChanged($event)" class="select">
@@ -54,7 +54,7 @@
             <nb-select-label>{{selectedTypeFilter.name}}</nb-select-label>
             <nb-option *ngFor="let typeFilter of typeFilters" [value]="typeFilter"
                        [disabled]="typeFilterCounters.get(typeFilter) < 1">
-              <span title="{{typeFilter.description}}">
+              <span nbTooltip="{{typeFilter.description}}">
                 {{typeFilter.name}}
                 <span *ngIf="typeFilterCounters.get(typeFilter) > 0"> ({{typeFilterCounters.get(typeFilter)}})</span></span>
             </nb-option>
@@ -65,18 +65,18 @@
                      nbTooltip="Story Focus" placeholder="Story Focus" status="primary" class="select-story">
             <nb-select-label>
               <span *ngIf="selectedStory">
-                <mat-icon *ngIf="selectedStory.isBuiltIn()" class="story-type">build</mat-icon>
-                <mat-icon *ngIf="selectedStory.isSimpleAnswer()" class="story-type">message</mat-icon>
-                <mat-icon *ngIf="selectedStory.isScriptAnswer()" class="story-type">code</mat-icon>
+                <nb-icon *ngIf="selectedStory.isBuiltIn()" class="story-type" icon="cube"></nb-icon>
+                <nb-icon *ngIf="selectedStory.isSimpleAnswer()" class="story-type" icon="message-square-outline"></nb-icon>
+                <nb-icon *ngIf="selectedStory.isScriptAnswer()" class="story-type" icon="code"></nb-icon>
                 <span class="story-label">{{selectedStory.name}}</span>
               </span>
             </nb-select-label>
             <nb-option [value]="undefined">All</nb-option>
             <nb-option *ngFor="let entry of storiesById | keyvalue" [value]="entry.value"
                        [disabled]="!selectedTypeFilter.filter(entry.value)">
-              <mat-icon *ngIf="entry.value.isBuiltIn()" class="story-type" title="BuiltIn">build</mat-icon>
-              <mat-icon *ngIf="entry.value.isSimpleAnswer()" class="story-type" title="Message">message</mat-icon>
-              <mat-icon *ngIf="entry.value.isScriptAnswer()" class="story-type" title="Script">code</mat-icon>
+              <nb-icon *ngIf="entry.value.isBuiltIn()" class="story-type" nbTooltip="BuiltIn" icon="cube"></nb-icon>
+              <nb-icon *ngIf="entry.value.isSimpleAnswer()" class="story-type" nbTooltip="Message" icon="message-square-outline"></nb-icon>
+              <nb-icon *ngIf="entry.value.isScriptAnswer()" class="story-type" nbTooltip="Script" icon="code"></nb-icon>
               {{entry.value.name}}
             </nb-option>
           </nb-select>
@@ -84,20 +84,20 @@
                      placeholder="Story Focus" status="primary" class="select-story">
             <nb-select-label>
               <span *ngIf="selectedStory">
-                <mat-icon *ngIf="selectedStory.isBuiltIn()" class="story-type">build</mat-icon>
-                <mat-icon *ngIf="selectedStory.isSimpleAnswer()" class="story-type">message</mat-icon>
-                <mat-icon *ngIf="selectedStory.isScriptAnswer()" class="story-type">code</mat-icon>
-                <mat-icon *ngIf="selectedStory.storyType == undefined" class="story-type">help_outline</mat-icon>
+                <nb-icon *ngIf="selectedStory.isBuiltIn()" class="story-type" icon="cube"></nb-icon>
+                <nb-icon *ngIf="selectedStory.isSimpleAnswer()" class="story-type" icon="message-square-outline"></nb-icon>
+                <nb-icon *ngIf="selectedStory.isScriptAnswer()" class="story-type" icon="code"></nb-icon>
+                <nb-icon *ngIf="selectedStory.storyType == undefined" class="story-type" icon="question-mark-circle-outline"></nb-icon>
                 <span class="story-label">{{selectedStory.storyName}}</span>
               </span>
             </nb-select-label>
             <nb-option [value]="undefined">All</nb-option>
             <nb-option *ngFor="let entry of nodesById | keyvalue" [value]="entry.value"
                        [disabled]="!selectedTypeFilter.filter(entry.value)">
-              <mat-icon *ngIf="entry.value.isBuiltIn()" class="story-type" title="BuiltIn">build</mat-icon>
-              <mat-icon *ngIf="entry.value.isSimpleAnswer()" class="story-type" title="Message">message</mat-icon>
-              <mat-icon *ngIf="entry.value.isScriptAnswer()" class="story-type" title="Script">code</mat-icon>
-              <mat-icon *ngIf="entry.value.storyType == undefined" class="story-type" title="Unknown Type">help_outline</mat-icon>
+              <nb-icon *ngIf="entry.value.isBuiltIn()" class="story-type" nbTooltip="BuiltIn" icon="cube"></nb-icon>
+              <nb-icon *ngIf="entry.value.isSimpleAnswer()" class="story-type" nbTooltip="Message" icon="message-square-outline"></nb-icon>
+              <nb-icon *ngIf="entry.value.isScriptAnswer()" class="story-type" nbTooltip="Script" icon="code"></nb-icon>
+              <nb-icon *ngIf="entry.value.storyType == undefined" class="story-type" nbTooltip="Unknown Type" icon="question-mark-circle-outline"></nb-icon>
               {{entry.value.storyName}}
             </nb-option>
           </nb-select>
@@ -111,34 +111,34 @@
         </span>
         &nbsp;&nbsp;
         <span *ngIf="statsMode">
-          <nb-checkbox [(ngModel)]="entity" (change)="update()" class="checkbox" title="View more Nodes by Entity values">Entity</nb-checkbox>
-          <nb-checkbox [(ngModel)]="step" (change)="update()" class="checkbox" title="View more Nodes by Step">Step</nb-checkbox>
-          <nb-checkbox [(ngModel)]="intent" (change)="update()" class="checkbox" title="View more Nodes by Intent">Intent</nb-checkbox>
+          <nb-checkbox [(ngModel)]="entity" (change)="update()" class="checkbox" nbTooltip="View more Nodes by Entity values">Entity</nb-checkbox>
+          <nb-checkbox [(ngModel)]="step" (change)="update()" class="checkbox" nbTooltip="View more Nodes by Step">Step</nb-checkbox>
+          <nb-checkbox [(ngModel)]="intent" (change)="update()" class="checkbox" nbTooltip="View more Nodes by Intent">Intent</nb-checkbox>
         </span>
         <span *ngIf="!statsMode">
-          <nb-checkbox [(ngModel)]="displayDisabled" (change)="update()" class="checkbox" title="Include Stories Disabled by Rules">Disabled</nb-checkbox>
+          <nb-checkbox [(ngModel)]="displayDisabled" (change)="update()" class="checkbox" nbTooltip="Include Stories Disabled by Rules">Disabled</nb-checkbox>
         </span>
       </div>
 
       <div class="flow-option-group" *ngIf="statsMode">
         <span class="flow-option-group-name">Filters:</span>
         <span>
-          <span class="flow-option-label" title="Filter by Minimum Traffic through Node">Min. Node Traffic: </span>
+          <span class="flow-option-label" nbTooltip="Filter by Minimum Traffic through Node">Min. Node Traffic: </span>
           <mat-slider thumbLabel tickInterval="1" [(ngModel)]="minimalNodeCount" [max]="maxNodeCount"
                       (change)="updateCount()"></mat-slider>
         </span>
         <span>
-          <span class="flow-option-label" title="Filter by Minimum Percentage of Transitions">Min. Transition %: </span>
+          <span class="flow-option-label" nbTooltip="Filter by Minimum Percentage of Transitions">Min. Transition %: </span>
           <mat-slider thumbLabel tickInterval="1" [(ngModel)]="minimalTransitionPercentage"
                       (change)="updateCount()"></mat-slider>
         </span>
         <span>
           <nb-checkbox [(ngModel)]="displayTests" (change)="reload()" class="checkbox"
-                       title="Include Test Flow">Tests</nb-checkbox>
+                       nbTooltip="Include Test Flow">Tests</nb-checkbox>
         </span>
         <span>
           <nb-checkbox [(ngModel)]="mergeOldStories" (change)="update()" class="checkbox"
-                       title="Merge Old Stats to Latest Stories when possible">Merge to Latest Stories</nb-checkbox>
+                       nbTooltip="Merge Old Stats to Latest Stories when possible">Merge to Latest Stories</nb-checkbox>
         </span>
       </div>
 
@@ -152,14 +152,14 @@
         </span>
         <span *ngIf="statsMode">
           <nb-checkbox [(ngModel)]="recursive" (change)="update()" class="checkbox"
-                       title="Display Recursive Transitions from each Node to itself">Recursive Transitions</nb-checkbox>
+                       nbTooltip="Display Recursive Transitions from each Node to itself">Recursive Transitions</nb-checkbox>
         </span>
         <nb-checkbox [(ngModel)]="displayNodeType" (change)="updateCount()" class="checkbox"
-                     title="Display Story Type icon on each Node">Story Types</nb-checkbox>
+                     nbTooltip="Display Story Type icon on each Node">Story Types</nb-checkbox>
         <nb-checkbox *ngIf="!statsMode" [(ngModel)]="intent" (change)="updateCount()" class="checkbox"
-                     title="Display Story Main Intent on each Node">Main Intents</nb-checkbox>
+                     nbTooltip="Display Story Main Intent on each Node">Main Intents</nb-checkbox>
         <nb-checkbox [(ngModel)]="displayDebug" class="checkbox"
-                     title="Display Debug stats">Debug</nb-checkbox>
+                     nbTooltip="Display Debug stats">Debug</nb-checkbox>
         <span *ngIf="displayDebug">
           <span class="flow-stat" *ngIf="nodesById || storiesById">
             Total Stories: {{ statsMode ? nodesById.size : storiesById.size }}
