--- a/bot/admin/web/src/app/bot/story/story.component.html
+++ b/bot/admin/web/src/app/bot/story/story.component.html
@@ -22,9 +22,9 @@
                      (closed)="story.selected = false">
   <mat-expansion-panel-header>
     <mat-panel-title class="panel-title">
-      <mat-icon *ngIf="!storyNode && story.isBuiltIn()" class="story-type" matTooltip="Built-in Story">build</mat-icon>
-      <mat-icon *ngIf="!storyNode && story.isSimpleAnswer()" class="story-type" matTooltip="Message Story">message</mat-icon>
-      <mat-icon *ngIf="!storyNode && story.isScriptAnswer()" class="story-type" matTooltip="Script Story">code</mat-icon>
+      <nb-icon *ngIf="!storyNode && story.isBuiltIn()" class="story-type" nbTooltip="Built-in Story" icon="cube"></nb-icon>
+      <nb-icon *ngIf="!storyNode && story.isSimpleAnswer()" class="story-type" nbTooltip="Message Story" icon="message-square-outline"></nb-icon>
+      <nb-icon *ngIf="!storyNode && story.isScriptAnswer()" class="story-type" nbTooltip="Script Story" icon="code"></nb-icon>
       <span *ngIf="!storyNode" nbTooltip="Story name" class="answer-title">{{story.name}}</span>
       <span *ngIf="storyNode" nbTooltip="Story name" [matBadge]="storyNode.displayCount()"
             [matBadgeHidden]="!displayCount"
