--- a/bot/admin/web/src/app/analytics/activity/activity.component.html
+++ b/bot/admin/web/src/app/analytics/activity/activity.component.html
@@ -2,7 +2,7 @@
   <nb-card>
     <nb-card-body nbSpinnerStatus="primary">
       <date-range-calendar [rangeInDays]="7" (datesChanged)="datesChanged($event)"></date-range-calendar>
-      <tock-select-bot [allowNoConfigurationSelection]="false" noConnectorLabel="All Connectors"
+      <tock-select-bot [allowNoConfigurationSelection]="true" noConnectorLabel="All Connectors"
                        [allowNoSelection]="true" noConfigurationLabel="All Configurations"
                        (selectionChange)="selectedConfigurationChanged($event)" class="select-bot">
       </tock-select-bot>
@@ -23,6 +23,8 @@
   </nb-card>
 
   <tock-chart [data]="messagesByType" title="Messages" [pretty]="pretty" [stacked]="stacked"></tock-chart>
+  <tock-chart [data]="messagesByStory" title="Messages by Story" [pretty]="pretty" [stacked]="stacked"></tock-chart>
+  <tock-chart [data]="messagesByIntent" title="Messages by Intent" [pretty]="pretty" [stacked]="stacked"></tock-chart>
   <tock-chart [data]="messagesByConfiguration" title="Messages by Configuration" [pretty]="pretty" [stacked]="stacked"></tock-chart>
   <tock-chart [data]="messagesByConnector" title="Messages by Connector Type" [pretty]="pretty" [stacked]="stacked"></tock-chart>
 
