--- a/bot/admin/web/src/app/analytics/chart/chart.component.html
+++ b/bot/admin/web/src/app/analytics/chart/chart.component.html
@@ -1,7 +1,7 @@
 
 <nb-flip-card [showToggleButton]="false" [flipped]="isFlipped" *ngIf="mainChart">
   <nb-card-front>
-    <nb-card>
+    <nb-card style="min-height: 60vh">
       <nb-card-header>
         {{title}}
         <button nbButton shape="round" (click)="onFlipAction()" nbTooltip="Show Table"
@@ -13,7 +13,7 @@
           CSV <nb-icon icon="download"></nb-icon>
         </button>
       </nb-card-header>
-      <nb-card-body>
+      <nb-card-body [nbSpinner]="isLoading" nbSpinnerStatus="primary">
         <div style="display: flex;">
           <google-chart
             [type]="mainChart.type"
@@ -22,8 +22,7 @@
             [options]="mainChart.options"
             [height]="mainChart.height"
             [dynamicResize]="true"
-            width="{{altChart ? '70%' : '100%'}}"
-            style="width: {{altChart ? '70%' : '100%'}};">
+            [style.width]="altChart ? '70%' : '100%'">
           </google-chart>
           <google-chart *ngIf="altChart"
             [type]="altChart.type"
@@ -32,7 +31,6 @@
             [options]="altChart.options"
             [height]="altChart.height"
             [dynamicResize]="true"
-            width="30%"
             style="width: 30%;">
           </google-chart>
         </div>
@@ -53,7 +51,6 @@
         </button>
       </nb-card-header>
       <nb-card-body>
-        <div style="width: 100%;">
           <google-chart
             type="Table"
             [data]="mainChart.data"
@@ -61,10 +58,9 @@
             [options]="mainChart.options"
             [height]="mainChart.height"
             [dynamicResize]="true"
-            width="100%"
-            style="width: 100%;">
+            width="75vw"
+            style="overflow-x: auto;">
           </google-chart>
-        </div>
       </nb-card-body>
     </nb-card>
   </nb-card-back>
