resolves #942 Analytics: lazy-load charts with accordion
Remaining:
- Error when loading page: "ExpressionChangedAfterItHasBeenCheckedError: Expression has changed after it was checked. Previous value for 'collapsed': 'true'. Current value: 'false'."
- Fix datatable width (should be 100%)

Signed-off-by: Francois Nollen <francois.nollen@gmail.com>

--- a/bot/admin/web/src/app/analytics/behavior/behavior.component.html
+++ b/bot/admin/web/src/app/analytics/behavior/behavior.component.html
@@ -1,13 +1,16 @@
 <div class="content" id="element-id">
   <nb-card>
-    <nb-card-body nbSpinnerStatus="primary">
+    <nb-card-body [nbSpinner]="loading" nbSpinnerStatus="primary">
       <date-range-calendar [rangeInDays]="7" (datesChanged)="datesChanged($event)"></date-range-calendar>
       <tock-select-bot [allowNoConfigurationSelection]="true" noConnectorLabel="All Connectors"
                        [allowNoSelection]="true" noConfigurationLabel="All Configurations"
                        (selectionChange)="selectedConfigurationChanged($event)" class="select-bot">
       </tock-select-bot>
+      <button nbButton shape="round" (click)="waitAndRefresh()" nbTooltip="Refresh Data" status="basic">
+        <nb-icon icon="refresh-outline"></nb-icon>
+      </button>
       <span style="float: right; padding: 5px;">
-        <nb-toggle status="success" [(ngModel)]="pretty" (change)="waitAndRefresh()">
+        <nb-toggle status="success" [(ngModel)]="pretty">
           Pretty (3D)
         </nb-toggle>
         &nbsp;&nbsp;
@@ -22,13 +25,55 @@
     </nb-card-body>
   </nb-card>
 
-  <tock-chart [data]="messagesByStory" title="Messages by Story" [pretty]="pretty" type="PieChart"></tock-chart>
-  <tock-chart [data]="messagesByIntent" title="Messages by Intent" [pretty]="pretty" type="PieChart"></tock-chart>
-  <tock-chart [data]="messagesByDayOfWeek" title="Messages by Day of Week" [pretty]="pretty" type="PieChart"></tock-chart>
-  <tock-chart [data]="messagesByHour" title="Messages by Hour of Day" [pretty]="pretty" type="PieChart"></tock-chart>
-  <tock-chart [data]="messagesByActionType" title="Messages by Action Type" [pretty]="pretty" type="PieChart"></tock-chart>
-  <tock-chart [data]="messagesByStoryCategory" title="Messages by Story Category" [pretty]="pretty" type="PieChart"></tock-chart>
-  <tock-chart [data]="messagesByStoryType" title="Messages by Story Type" [pretty]="pretty" type="PieChart"></tock-chart>
-  <tock-chart [data]="messagesByStoryLocale" title="Messages by Locale" [pretty]="pretty" type="PieChart"></tock-chart>
+  <nb-accordion>
+    <nb-accordion-item #messagesByStoryItem (collapsedChange)="collapsedChange($event)">
+      <nb-accordion-item-header>Messages by Story</nb-accordion-item-header>
+      <nb-accordion-item-body>
+        <tock-chart [data]="messagesByStoryData" title="Messages by Story" [pretty]="pretty" type="PieChart"></tock-chart>
+      </nb-accordion-item-body>
+    </nb-accordion-item>
+    <nb-accordion-item #messagesByIntentItem (collapsedChange)="collapsedChange($event)">
+      <nb-accordion-item-header>Messages by Intent</nb-accordion-item-header>
+      <nb-accordion-item-body>
+        <tock-chart [data]="messagesByIntentData" title="Messages by Intent" [pretty]="pretty" type="PieChart"></tock-chart>
+      </nb-accordion-item-body>
+    </nb-accordion-item>
+    <nb-accordion-item #messagesByDayOfWeekItem (collapsedChange)="collapsedChange($event)">
+      <nb-accordion-item-header>Messages by Day of Week</nb-accordion-item-header>
+      <nb-accordion-item-body>
+        <tock-chart [data]="messagesByDayOfWeekData" title="Messages by Day of Week" [pretty]="pretty" type="PieChart"></tock-chart>
+      </nb-accordion-item-body>
+    </nb-accordion-item>
+    <nb-accordion-item #messagesByHourItem (collapsedChange)="collapsedChange($event)">
+      <nb-accordion-item-header>Messages by Hour of Day</nb-accordion-item-header>
+      <nb-accordion-item-body>
+        <tock-chart [data]="messagesByHourData" title="Messages by Hour of Day" [pretty]="pretty" type="PieChart"></tock-chart>
+      </nb-accordion-item-body>
+    </nb-accordion-item>
+    <nb-accordion-item #messagesByActionTypeItem (collapsedChange)="collapsedChange($event)">
+      <nb-accordion-item-header>Messages by Action Type</nb-accordion-item-header>
+      <nb-accordion-item-body>
+        <tock-chart [data]="messagesByActionTypeData" title="Messages by Action Type" [pretty]="pretty" type="PieChart"></tock-chart>
+      </nb-accordion-item-body>
+    </nb-accordion-item>
+    <nb-accordion-item #messagesByStoryCategoryItem (collapsedChange)="collapsedChange($event)">
+      <nb-accordion-item-header>Messages by Story Category</nb-accordion-item-header>
+      <nb-accordion-item-body>
+        <tock-chart [data]="messagesByStoryCategoryData" title="Messages by Story Category" [pretty]="pretty" type="PieChart"></tock-chart>
+      </nb-accordion-item-body>
+    </nb-accordion-item>
+    <nb-accordion-item #messagesByStoryTypeItem (collapsedChange)="collapsedChange($event)">
+      <nb-accordion-item-header>Messages by Story Type</nb-accordion-item-header>
+      <nb-accordion-item-body>
+        <tock-chart [data]="messagesByStoryTypeData" title="Messages by Story Type" [pretty]="pretty" type="PieChart"></tock-chart>
+      </nb-accordion-item-body>
+    </nb-accordion-item>
+    <nb-accordion-item #messagesByStoryLocaleItem (collapsedChange)="collapsedChange($event)">
+      <nb-accordion-item-header>Messages by Locale</nb-accordion-item-header>
+      <nb-accordion-item-body>
+        <tock-chart [data]="messagesByStoryLocaleData" title="Messages by Locale" [pretty]="pretty" type="PieChart"></tock-chart>
+      </nb-accordion-item-body>
+    </nb-accordion-item>
+  </nb-accordion>
 
 </div>
