resolves #984 load story summary in a tree grid
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/admin/web/src/app/bot/story/create-story.component.html
+++ b/bot/admin/web/src/app/bot/story/create-story.component.html
@@ -49,7 +49,7 @@
   (or qualify)
   <br><br></span>
 <tock-sentence-analysis *ngIf="sentence"
-                        [(sentence)]="sentence"
+                        [sentence]="sentence"
                         (closed)="resetState()"
                         [displayProbabilities]="true">
 </tock-sentence-analysis>
