--- a/bot/admin/web/src/app/bot/story/search-story.component.html
+++ b/bot/admin/web/src/app/bot/story/search-story.component.html
@@ -56,7 +56,63 @@
     </button>
   </nb-card-footer>
 </nb-card>
-<mat-accordion *ngIf="stories">
-  <tock-story *ngFor="let s of stories" [storyTag]="s.getFirstTag()" [story]="s" (delete)="delete($event)"
-              [fullDisplay]="true" [displaySteps]="true" (close)="search(s)"></tock-story>
+<nb-card *ngIf="nodes && !selectedStory">
+  <nb-card-body>
+    <table [nbTreeGrid]="nodes">
+
+      <tr nbTreeGridHeaderRow *nbTreeGridHeaderRowDef="allColumns"></tr>
+      <tr nbTreeGridRow *nbTreeGridRowDef="let row; columns: allColumns"></tr>
+
+      <ng-container [nbTreeGridColumnDef]="categoryColumn">
+        <th nbTreeGridHeaderCell *nbTreeGridHeaderCellDef>{{categoryColumn}}</th>
+        <td nbTreeGridCell *nbTreeGridCellDef="let row">
+
+          <nb-tree-grid-row-toggle *ngIf="row.data.expandable" [expanded]="row.expanded"></nb-tree-grid-row-toggle>
+          <span *ngIf="row.data.expandable">{{row.data.category}}</span>
+          <span *ngIf="!row.data.expandable">
+            <nb-icon *ngIf="row.data.isBuiltIn()" class="story-type" nbTooltip="Built-in Story" icon="cube"></nb-icon>
+            <nb-icon *ngIf="row.data.isSimpleAnswer()" class="story-type" nbTooltip="Message Story" icon="message-square-outline"></nb-icon>
+            <nb-icon *ngIf="row.data.isScriptAnswer()" class="story-type" nbTooltip="Script Story" icon="code"></nb-icon>
+
+            {{row.data.name}}
+          </span>
+        </td>
+      </ng-container>
+      <ng-container [nbTreeGridColumnDef]="intentColumn" [hideOn]="500">
+        <th nbTreeGridHeaderCell *nbTreeGridHeaderCellDef>{{intentColumn}}</th>
+        <td nbTreeGridCell *nbTreeGridCellDef="let row" >
+          <span *ngIf="!row.data.expandable">{{row.data.intent.getIntentLabel(state)}}</span>
+        </td>
+      </ng-container>
+      <ng-container [nbTreeGridColumnDef]="descriptionColumn" [hideOn]="800">
+        <th nbTreeGridHeaderCell *nbTreeGridHeaderCellDef>{{descriptionColumn}}</th>
+        <td nbTreeGridCell *nbTreeGridCellDef="let row" >
+          <span *ngIf="!row.data.expandable">{{row.data.description}}</span>
+        </td>
+      </ng-container>
+      <ng-container [nbTreeGridColumnDef]="actionsColumn">
+        <th nbTreeGridHeaderCell *nbTreeGridHeaderCellDef>{{ actionsColumn }}</th>
+        <td nbTreeGridCell *nbTreeGridCellDef="let row">
+            <div *ngIf="!row.data.expandable">
+              <button nbButton outline status="primary" nbTooltip="View/Edit Story" (click)="editStory(row.data)" class="action">
+                <nb-icon icon="edit-outline"></nb-icon>
+              </button>
+              <button nbButton outline status="basic" nbTooltip="Export Story" (click)="downloadStory(row.data)" class="action">
+                <nb-icon icon="download-outline"></nb-icon>
+              </button>
+              <button nbButton outline status="danger" nbTooltip="Delete Story" (click)="deleteStory(row.data)" class="action">
+                <nb-icon icon="trash-2-outline"></nb-icon>
+              </button>
+            </div>
+
+        </td>
+      </ng-container>
+    </table>
+  </nb-card-body>
+</nb-card>
+
+<mat-accordion *ngIf="selectedStory">
+  <tock-story [storyTag]="selectedStory.getFirstTag()" [story]="selectedStory" (delete)="delete($event)"
+              [fullDisplay]="true" [displaySteps]="true" (close)="keepExpandableStateAndSearch()"></tock-story>
 </mat-accordion>
+
